[tool.poetry]
name = "renet"
version = "0.011"
description = "Renet, reliable udp"
readme = "README.md"
homepage = "https://github.com/solidsmokesoftware/renet.py"
authors = ["Solid Smoke Software <solid.smoke.software@gmail.com>"]
license = "LGPL-3.0"
packages = [{include = "renet"}]
include = ["renet/*.txt"]

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
